# UPNPseudograph

./: .gitignore  Module-6-Assignment.md  README.md  Whitepaper.md  agent.py  message_history.txt  pyproject.toml  requirements.txt  secret_pixel.py  to_pdf.sh  upnp.py  utils.py
src/upnpseudograph/: __main__.py  agent.py  secret_pixel.py  ssdp.py  upnp.py  utils.py
